camera movement done

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@ GameName=SideScroller2D
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MyDemo/Maps/Level_01.Level_01
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Game/MyDemo/Maps/Level_01.Level_01
@@ -136,5 +136,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
