menu system done

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,12 +2,12 @@
 GameName=SideScroller2D
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ShooterFighter/Maps/Level_01.Level_01
+EditorStartupMap=/Game/ShooterFighter/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/ShooterFighter/Maps/Level_01.Level_01
+GameDefaultMap=/Game/ShooterFighter/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
